# franklin-crypto

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
benches/: baby_pedersen_hash.rs  pedersen_hash.rs  poseidon_hash.rs
examples/: bench.rs
src/: as_waksman.rs  as_waskman.rs  baby_group_hash.rs  baby_pedersen_hash.rs  constants.rs  eddsa.rs  group_hash.rs  hades.rs  interpolation.rs  lib.rs  pedersen_hash.rs  redbabyjubjub.rs  redjubjub.rs  straus.rs  util.rs
src/alt_babyjubjub/: fs.rs  mod.rs
src/alt_babyjubjub/v2/: alt_babyjubjub.rs  bench.rs  edwards.rs  mod.rs  tests.rs  util.rs
src/babyjubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs
src/circuit/: array.rs  as_waksman.rs  baby_ecc.rs  baby_eddsa.rs  baby_pedersen_hash.rs  blake2s.rs  boolean.rs  ecc.rs  expression.rs  float_point.rs  hashmap.rs  linear_combination.rs  lookup.rs  mod.rs  multieq.rs  multipack.rs  num.rs  pedersen_hash.rs  permutation.rs  polynomial_lookup.rs  poseidon_hash.rs  rescue.rs  sha256.rs  shark_mimc.rs  uint32.rs
src/circuit/edwards/: edwards.rs  jubjub.rs
src/circuit/sapling/: mod.rs
src/circuit/sprout/: commitment.rs  input.rs  mod.rs  output.rs  prfs.rs
src/circuit/test/: all_zeroes_catcher.rs  counting.rs  density_counting.rs  duplicate_lc_finder.rs  find_first_invalid.rs  find_unconstrained.rs  mod.rs
src/dependencies/blake2-rfc/: .travis.yml  Cargo.toml  clippy.toml
src/dependencies/blake2-rfc/benches/: blake2b.rs  blake2s.rs
src/dependencies/blake2-rfc/src/: blake2.rs  blake2b.rs  blake2s.rs  bytes.rs  lib.rs  simdty.rs
src/dependencies/blake2-rfc/src/simd_opt/: mod.rs  u32x4.rs  u64x4.rs
src/generic_twisted_edwards/: edwards.rs  mod.rs  tests.rs  util.rs
src/generic_twisted_edwards/bn256/: mod.rs
src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs
src/plonk/circuit/: allocated_num.rs  assignment.rs  blake2s.rs  boolean.rs  byte.rs  counter.rs  custom_5th_degree_gate_optimized.rs  custom_rescue_gate.rs  linear_combination.rs  mod.rs  multieq.rs  poseidon.rs  rescue.rs  sha256.rs  simple_term.rs  tables.rs  uint32.rs  utils.rs
src/plonk/circuit/bigint/: bigint.rs  field.rs  mod.rs  range_constraint_functions.rs  range_constraint_gate.rs  single_table_range_constraint.rs
src/plonk/circuit/curve/: ecdsa.rs  endomorphism.rs  mod.rs  multiexp_table.rs  selection_table.rs  sw_affine.rs  sw_projective.rs
src/plonk/circuit/edwards/: edwards.rs  jubjub.rs  mod.rs  tests.rs
src/plonk/circuit/edwards/bn256/: mod.rs
src/plonk/circuit/hashes_with_tables/: mod.rs  tables.rs  utils.rs
src/plonk/circuit/hashes_with_tables/blake2s/: gadgets.rs  mod.rs  tables.rs  test.rs
src/plonk/circuit/hashes_with_tables/keccak/: gadgets.rs  keccak_testsuit.py  mod.rs  tables.rs  tests.rs  utils.rs
src/plonk/circuit/hashes_with_tables/sha256/: gadgets.rs  mod.rs  tables.rs  test.rs  utils.rs
src/plonk/circuit/permutation_network/: circuit.rs  mod.rs  witness.rs
src/plonk/circuit/verifier_circuit/: aux_data.rs  channel.rs  circuit.rs  data_structs.rs  helper_functions.rs  mod.rs  test.rs  utils.rs  verifying_circuit.rs
src/plonk/circuit/verifier_circuit/affine_point_wrapper/: aux_data.rs  mod.rs  with_zero_flag.rs  without_flag_checked.rs  without_flag_unchecked.rs
src/poseidon/: bn256.rs  mod.rs
src/primitives/: mod.rs
src/rescue/: bn256_2_into_1.rs  mod.rs  rescue_transcript.rs
src/rescue/bn256/: mod.rs  rescue_transcript.rs
