[package]
authors = ["Sean Bowe <sean@z.cash>", "Alex Vlasov <alex.m.vlasov@gmail.com>", "Alex Gluchowski <alex@gluchowski.net>"]
description = "Cryptographic library for SNARK gadgets"
#documentation = "https://github.com/matter-labs/sapling-crypto"
homepage = "https://github.com/matter-labs/sapling-crypto"
license = "MIT/Apache-2.0"
name = "franklin-crypto"
#repository = "https://github.com/matter-labs/sapling-crypto"
version = "0.0.5"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["multicore"]
multicore = ["bellman/multicore"]
plonk = ["bellman/plonk"]
 
[dependencies]
rand = "0.4"
digest = "0.7"
byteorder = "1"
serde = "1.0.80"
serde_derive = "1.0.80"
tiny-keccak = "1.4.2"
bit-vec = "0.6"
sha2 = "0.8.0"
hmac = "0.7.1"
num-bigint = "0.2"
num-integer = "0.1"
num-traits = "0.2"

bellman = { package = "bellman_ce", path = "../bellman" }
# bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", rev = "d37cf517bcfa0793adeb43f22af658ad41a664dd" }
# bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "circuit_description" }
blake2-rfc_bellman_edition = "0.0.1"
poseidon_hash = { path = "../poseidon_hash" }

[dev-dependencies]
hex-literal = "0.1"

