[package]
authors = ["Sean Bowe <sean@z.cash>", "Alex Vlasov <alex.m.vlasov@gmail.com>", "Alex Gluchowski <alex@gluchowski.net>"]
description = "Cryptographic library for SNARK gadgets"
homepage = "https://github.com/matter-labs/franklin-crypto"
license = "MIT/Apache-2.0"
name = "franklin-crypto"
version = "0.0.5"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["multicore"]
multicore = ["bellman/multicore"]
 
[dependencies]
rand = "0.4"
digest = "0.7"
byteorder = "1"
serde = "1.0.80"
serde_derive = "1.0.80"
tiny-keccak = "1.4.2"
bit-vec = "0.6"
sha2 = "0.8.0"
hmac = "0.7.1"
# num-bigint = "0.2"
num-bigint = {git = "https://github.com/rust-num/num-bigint.git"}
num-integer = "0.1"
num-traits = "0.2"

bellman = { package = "bellman_ce", path = "C:/Users/Konstantce/Desktop/wrong_bellman/bellman" }
blake2-rfc_bellman_edition = "0.0.1"

[dev-dependencies]
hex-literal = "0.1"
hex = "*"

