[package]
name = "blake2-rfc"
version = "0.2.18"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "A pure Rust implementation of BLAKE2 based on RFC 7693."
documentation = "https://docs.rs/blake2-rfc"
repository = "https://github.com/cesarb/blake2-rfc"
readme = "README.md"
keywords = ["blake2", "blake2b", "blake2s", "hash", "crypto"]
categories = ["cryptography", "no-std"]
license = "MIT OR Apache-2.0"

[badges]
travis-ci = { repository = "cesarb/blake2-rfc" }

[features]
default = ["std"]
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]
std = []

[dependencies]
arrayvec = { version = "0.4.0", default-features = false }
byteorder = { version = "1.2.1", default-features = false }
constant_time_eq = "0.1.0"

[dev-dependencies]
data-encoding = "2.0.0"
